--- a/.github/workflows/build-kernel-release.yml
+++ b/.github/workflows/build-kernel-release.yml
@@ -7,6 +7,36 @@ permissions:
 on:
   workflow_dispatch:
     inputs:
+      build_a12_510:
+        description: 'Build a12 5.10?'
+        required: true
+        type: boolean
+        default: true
+      build_a13_510:
+        description: 'Build a13 5.10?'
+        required: true
+        type: boolean
+        default: true
+      build_a13_515:
+        description: 'Build a13 5.15?'
+        required: true
+        type: boolean
+        default: true
+      build_a14_515:
+        description: 'Build a14 5.15?'
+        required: true
+        type: boolean
+        default: true
+      build_a14_61:
+        description: 'Build a14 6.1?'
+        required: true
+        type: boolean
+        default: true
+      build_a15_66:
+        description: 'Build a15  6.6?'
+        required: true
+        type: boolean
+        default: true
       make_release:
         description: 'Do you want to create a release?'
         required: true
@@ -17,6 +47,8 @@ on:
         required: true
         type: choice
         options:
+          - Official
+          - Next
           - MKSU
         default: MKSU
       kernelsu_branch:
@@ -36,7 +68,53 @@ on:
 
 jobs:
   build-kernel-a12-5-10:
+    if: ${{ inputs.build_a12_510 }}
     uses: ./.github/workflows/kernel-a12-5.10.yml
+    secrets: inherit
+    with:
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+      kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
+
+  build-kernel-a13-5-10:
+    if: ${{ inputs.build_a13_510 }}
+    uses: ./.github/workflows/kernel-a13-5.10.yml
+    secrets: inherit
+    with:
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+      kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
+
+  build-kernel-a13-5-15:
+    if: ${{ inputs.build_a13_515 }}
+    uses: ./.github/workflows/kernel-a13-5.15.yml
+    secrets: inherit
+    with:
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+      kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
+
+  build-kernel-a14-5-15:
+    if: ${{ inputs.build_a14_515 }}
+    uses: ./.github/workflows/kernel-a14-5.15.yml
+    secrets: inherit
+    with:
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+      kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
+
+  build-kernel-a14-6-1:
+    if: ${{ inputs.build_a14_61 }}
+    uses: ./.github/workflows/kernel-a14-6.1.yml
+    secrets: inherit
+    with:
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+      kernelsu_branch: ${{ inputs.kernelsu_branch }}
+      kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
+
+  build-kernel-a15-6-6:
+    if: ${{ inputs.build_a15_66 }}
+    uses: ./.github/workflows/kernel-a15-6.6.yml
     secrets: inherit
     with:
       kernelsu_variant: ${{ inputs.kernelsu_variant }}
@@ -47,11 +125,16 @@ jobs:
     runs-on: ubuntu-latest
     needs:
         - build-kernel-a12-5-10
+        - build-kernel-a13-5-10
+        - build-kernel-a13-5-15
+        - build-kernel-a14-5-15
+        - build-kernel-a14-6-1
+        - build-kernel-a15-6-6
     if: ${{ inputs.make_release }}
     env:
       REPO_OWNER: WildPlusKernel
       REPO_NAME: GKI_KernelSU_SUSFS
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.MY_PAT_TOKEN }}
       RELEASE_NAME: "*TEST BUILD* GKI Kernels With KernelSU-${{ inputs.kernelsu_variant }} ${{ inputs.kernelsu_branch }} & SUSFS v1.5.5 *TEST BUILD*"
       RELEASE_NOTES: |
         This release contains KernelSU-${{ inputs.kernelsu_variant }} ${{ inputs.kernelsu_branch }} and SUSFS v1.5.5
@@ -64,9 +147,11 @@ jobs:
         -> Simple Maphide for LineageOS Detections
         -> Futile Maphide for jit-zygote-cache Detections
         -> Magic Mount Support
+        -> BBR Support
 
         Notes:
         -> SUS SU Mode 2 will show as disabled or not compatble due to non-kprobe hooks and is not needed anymore!
+        -> Kernel Flasher is broken with latest susfs, try https://github.com/libxzr/HorizonKernelFlasher!
 
         Module: 
         -> https://github.com/sidex15/ksu_module_susfs
@@ -80,8 +165,12 @@ jobs:
         if: ${{ inputs.kernelsu_branch == 'Dev' || inputs.kernelsu_variant == 'MKSU' }}
         run: |
           # Determine the branch based on user input
-          if [[ "${{ inputs.kernelsu_variant }}" == "MKSU" ]]; then
+          if [[ "${{ inputs.kernelsu_variant }}" == "Official" || "${{ inputs.kernelsu_variant }}" == "MKSU" ]]; then
             BRANCH="susfs"
+          elif [[ "${{ inputs.kernelsu_variant }}" == "Next" ]]; then
+            BRANCH="next"
+          elif [[ "${{ inputs.kernelsu_branch }}" == "Other" && -n "${{ inputs.kernelsu_branch_other }}" ]]; then
+            BRANCH="${{ inputs.kernelsu_branch_other }}"
           else
             echo "Error: Custom branch not provided for 'Other'" >&2
             exit 1
@@ -92,7 +181,15 @@ jobs:
 
       - name: Get commit hash or tag and generate URL for KernelSU-${{ inputs.kernelsu_variant }}
         run: |
-          if [ "${{ inputs.kernelsu_variant }}" == "MKSU" ]; then
+          if [ "${{ inputs.kernelsu_variant }}" == "Official" ]; then
+            echo "This is the Official variant"
+            REPO_URL="https://github.com/tiann/KernelSU.git"
+            REPO_URL2="tiann/KernelSU"
+          elif [ "${{ inputs.kernelsu_variant }}" == "Next" ]; then
+            echo "This is the Next variant"
+            REPO_URL="https://github.com/KernelSU-Next/KernelSU-Next.git"
+            REPO_URL2="KernelSU-Next/KernelSU-Next"
+          elif [ "${{ inputs.kernelsu_variant }}" == "MKSU" ]; then
             echo "This is the MKSU variant"
             REPO_URL="https://github.com/ShirkNeko/KernelSU.git"
             REPO_URL2="ShirkNeko/KernelSU"
@@ -145,6 +242,10 @@ jobs:
 
           declare -A BRANCH_MAP=(
             ["gki_android12_5_10"]="gki-android12-5.10"
+            ["gki_android13_5_10"]="gki-android13-5.10"
+            ["gki_android13_5_15"]="gki-android13-5.15"
+            ["gki_android14_5_15"]="gki-android14-5.15"
+            ["gki_android14_6_1"]="gki-android14-6.1"
           )
 
           for var_name in "${!BRANCH_MAP[@]}"; do
@@ -164,12 +265,26 @@ jobs:
 
       - name: Append Commit Hashes & Links to `RELEASE_NOTES` & Append KernelSU-Next Reference to `RELEASE_NOTES`
         run: |
-          if [ "${{ inputs.kernelsu_variant }}" == "MKSU" ]; then
+          if [ "${{ inputs.kernelsu_variant }}" == "Official" ]; then
+            echo "This is the Official variant"
+            echo "RELEASE_NOTES<<EOF" >> $GITHUB_ENV
+            echo "$RELEASE_NOTES" >> $GITHUB_ENV
+            echo "Official Manager:" >> $GITHUB_ENV
+            echo "-> https://github.com/tiann/KernelSU" >> $GITHUB_ENV
+            echo "EOF" >> $GITHUB_ENV
+          elif [ "${{ inputs.kernelsu_variant }}" == "Next" ]; then
+            echo "This is the Next variant"
+            echo "RELEASE_NOTES<<EOF" >> $GITHUB_ENV
+            echo "$RELEASE_NOTES" >> $GITHUB_ENV
+            echo "Next Manager:" >> $GITHUB_ENV
+            echo "-> https://github.com/KernelSU-Next/KernelSU-Next" >> $GITHUB_ENV
+            echo "EOF" >> $GITHUB_ENV
+          elif [ "${{ inputs.kernelsu_variant }}" == "MKSU" ]; then
             echo "This is the MKSU variant"
             echo "RELEASE_NOTES<<EOF" >> $GITHUB_ENV
             echo "$RELEASE_NOTES" >> $GITHUB_ENV
             echo "MKSU Manager:" >> $GITHUB_ENV
-            echo "-> https://github.com/ShirkNeko/KernelSU" >> $GITHUB_ENV
+            echo "-> https://github.com/5ec1cff/KernelSU" >> $GITHUB_ENV
             echo "EOF" >> $GITHUB_ENV
           else
             echo "Unknown variant"
@@ -187,38 +302,66 @@ jobs:
           echo "${{ inputs.kernelsu_variant }}-${{ inputs.kernelsu_branch }}: [$KSU_REF]($KSU_URL)" >> $GITHUB_ENV
           echo "SUSFS4KSU:" >> $GITHUB_ENV
           echo "gki-android12-5.10: [$COMMIT_HASH_gki_android12_5_10]($COMMIT_URL_gki_android12_5_10)" >> $GITHUB_ENV
+          echo "gki-android13-5.10: [$COMMIT_HASH_gki_android13_5_10]($COMMIT_URL_gki_android13_5_10)" >> $GITHUB_ENV
+          echo "gki-android13-5.15: [$COMMIT_HASH_gki_android13_5_15]($COMMIT_URL_gki_android13_5_15)" >> $GITHUB_ENV
+          echo "gki-android14-5.15: [$COMMIT_HASH_gki_android14_5_15]($COMMIT_URL_gki_android14_5_15)" >> $GITHUB_ENV
+          echo "gki-android14-6.1: [$COMMIT_HASH_gki_android14_6_1]($COMMIT_URL_gki_android14_6_1)" >> $GITHUB_ENV
           echo "" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
           
       # Get the Latest Tag from GitHub
       - name: Generate and Create New Tag
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.MY_PAT_TOKEN }}
         run: |
             # Fetch the latest tag from GitHub (this is the latest tag based on the GitHub API)
             LATEST_TAG=$(gh api repos/$REPO_OWNER/$REPO_NAME/tags --jq '.[0].name')
             if [ -z "$LATEST_TAG" ]; then
-              LATEST_TAG="MKSU-SKN-r0"
+              LATEST_TAG="v1.5.5-r0"
             fi
             
             NEW_TAG=$(echo "$LATEST_TAG" | awk -F'-r' '{suffix=$2; if (!suffix) suffix=0; suffix++; printf "%s-r%d", $1, suffix}')
-    
+            
             # Output the new tag to be used
             echo "New tag: $NEW_TAG"
-    
+            
             # Set the new tag as an environment variable to be used in later steps
             echo "NEW_TAG=${NEW_TAG}" >> $GITHUB_ENV
-
+            
             # Create the tag in the repository
             git tag $NEW_TAG
             git push --tags
-            
-      # Download Artifacts for A12 (Only if A12 Build is successful or input is true or empty)
-      - name: Download Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: ./downloaded-artifacts
 
+      - name: Get Current Workflow Run ID
+        run: |
+          echo "RUN_ID=${{ github.run_id }}" >> $GITHUB_ENV
+          echo "Current Workflow Run ID: ${{ github.run_id }}"
+
+      - name: List Available Artifacts
+        run: |
+          echo "Fetching artifacts from current workflow run: $RUN_ID"
+          gh run view $RUN_ID --log | grep "Artifacts:" -A 10 | sed 's/Artifacts: //' > artifacts.txt || echo "No artifacts found."
+
+      - name: Filter Kernel Artifacts
+        run: |
+          echo "Filtering artifacts matching kernel-*..."
+          grep "^kernel-" artifacts.txt > filtered_artifacts.txt || true
+          echo "Filtered artifacts:"
+          cat filtered_artifacts.txt || echo "No kernel-* artifacts found."
+
+      - name: Download Filtered Artifacts
+        run: |
+          mkdir -p ./downloaded-artifacts
+          while IFS= read -r artifact; do
+            echo "Downloading artifact: $artifact"
+            gh run download --name "$artifact" --dir ./downloaded-artifacts
+          done < filtered_artifacts.txt
+
+      - name: List Downloaded Artifacts
+        run: |
+          echo "Downloaded kernel-* artifacts:"
+          ls -R ./downloaded-artifacts || echo "No kernel-* artifacts were downloaded."
+          
       # Create GitHub Release and upload files if make_release is true
       - name: Create GitHub Release
         uses: actions/create-release@v1
